--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,28 @@
+camelot-py==0.11.0
 cffi==1.15.1
+chardet==5.1.0
 charset-normalizer==3.1.0
+click==8.1.3
+colorama==0.4.6
 cryptography==40.0.2
 distro==1.8.0
+et-xmlfile==1.1.0
 freetype-py==2.3.0
 numpy==1.24.3
+openpyxl==3.1.2
 pandas==2.0.1
 pdfminer.six==20221105
 Pillow==9.5.0
 pycairo==1.23.0
 pycparser==2.21
+pypdf==3.9.0
 python-dateutil==2.8.2
 pytz==2023.3
 reportlab==4.0.0
 rlPyCairo==0.2.0
 six==1.16.0
 tabula-py==2.7.0
+tabulate==0.9.0
+typing_extensions==4.6.2
 tzdata==2023.3
+xmltodict==0.13.0
