--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ pdfminer.six==20221105
 Pillow==9.5.0
 pycairo==1.23.0
 pycparser==2.21
+PyMuPDF==1.21.0
 pypdf==3.9.0
 python-dateutil==2.8.2
 pytz==2023.3
@@ -23,6 +24,7 @@ rlPyCairo==0.2.0
 six==1.16.0
 tabula-py==2.7.0
 tabulate==0.9.0
+tqdm==4.65.0
 typing_extensions==4.6.2
 tzdata==2023.3
 xmltodict==0.13.0
